--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 <div class="header">
 
   <div class="logo">
-    <a href="index.html"><img src="MrCoffeBlanco.png"></a>
+    <a href="index.html"><img src="img/MrCoffeBlanco.png"></a>
   </div>
  
   <div class="field" id="searchform">
@@ -51,9 +51,11 @@
 </div>
 
 <div class="footer">
-
-  <p>-Mr. Coffee-</p>
-  <a href="">Política de Privacidad</a><br>
+  
+  <img src="img/MrCoffeeNegro.png">
+  <br>
+  <a href="">Política de Privacidad</a>
+  <br>
   <a href="">Aviso legal</a>
 
 </div>
