--- a/menu.html
+++ b/menu.html
@@ -10,7 +10,7 @@
 <div class="header">
 
   <div class="logo">
-    <a href="index.html"><img src="MrCoffeBlanco.png"></a>
+    <a href="index.html"><img src="img/MrCoffeBlanco.png"></a>
   </div>
  
   <div class="field" id="searchform">
@@ -42,8 +42,10 @@
 
 <div class="footer">
 
-  <p>-Mr. Coffee-</p>
-  <a href="">Política de Privacidad</a><br>
+  <img src="img/MrCoffeeNegro.png">
+  <br>
+  <a href="">Política de Privacidad</a>
+  <br>
   <a href="">Aviso legal</a>
 
 </div>
