--- a/contact.html
+++ b/contact.html
@@ -35,14 +35,17 @@
     </ul>
   </div>
 
-  <div class="col-10 col-s-12">
-    <h1 id="title">Contacto</h1>
+  <div class="col-10 col-s-12" id="espacio">
+    <div id="title">
+      <h1 >Contacto</h1>
+    </div>
+    
      <div class="info">
       <p>Calle Castellar, 59</p>
       <p>677 125 001</p>
-      <p>mrCoffeeCastellar@gmail.com</p>
-      <p></p>
-  </div>
+      <p>mrCoffee@gmail.com</p>
+    </div>
+
   <div class="map">
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d769.8724988791997!2d-5.988991424364742!3d37.39631665014413!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd126c040479f55f%3A0xbcd82f2cc8ecd182!2sC.%20Castellar%2C%2059%2C%2041003%20Sevilla!5e0!3m2!1ses!2ses!4v1635189075763!5m2!1ses!2ses" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
   </div>
@@ -51,7 +54,7 @@
 </div>
 
 <div class="footer">
-  
+
   <img src="img/MrCoffeeNegro.png">
   <br>
   <a href="">Política de Privacidad</a>
