--- a/gallery.html
+++ b/gallery.html
@@ -38,7 +38,7 @@
                 <div class="column">
                     <a href="img/gal1.png" target="_blanck"><img src="img/gal1.png"> </a>
                   
-                  <img src="img/gal2.jpg">
+                  <img class="agrandar" src="img/gal2.jpg">
                   <img src="img/gal3.jpg">
                   <img src="img/gal4.jpg">
                   <img src="img/gal5.jpg">
