--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
 
 
 
-     <div class="footer">
+     <footer class="footer">
         <img src="img/MrCoffeeNegro.png">
         <br>
         <a href="">Política de Privacidad</a>
         <br>
         <a href="">Aviso legal</a>
-     </div>
+     </footer>
         
         
         <script src="js/script.js" async defer></script>
