contacto e index redimensionado

--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
             </a>
           </div>
 
-          <h1>CONTACTO</h1>
+          <h1>CONTACT</h1>
     
          <div class="todo">
            <div class="informacion">
