--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 
   <div>
-    <video class="videoPortada" autoplay="" loop="" controls="">
+    <video class="videoPortada separacion" autoplay="" loop="" controls="">
       <source type="video/mp4" src="videos/video1.mp4">
     </video>
     <video  class="videoPortada" autoplay="" loop="" controls="">
