pagina acabada index y contactos

--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
         </div>
 
 
-  <div>
-    <video class="videoPortada separacion" autoplay="" loop="" controls="">
-      <source type="video/mp4" src="videos/video1.mp4">
-    </video>
+  <div class="coleccionVideos">
     <video  class="videoPortada" autoplay="" loop="" controls="">
       <source type="video/mp4" src="videos/video2.mp4">
     </video>
     <video class="videoPortada" autoplay="" loop="" controls="">
       <source type="video/mp4" src="videos/video3.mp4">
+    </video>
+    <video class="videoPortada separacion" autoplay="" loop="" controls="">
+      <source type="video/mp4" src="videos/video1.mp4">
     </video>
   </div>
 
