--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
      </div>
      
         <div class="topnav" id="myTopnav">
-            <a href="index.html" class="active">Inicio</a>
+            <a href="index.html" class="active">Home</a>
             <a href="menu.html">Menu</a>
-            <a href="reservation.html">Reservas</a>
-            <a href="contact.html">Contacto</a>
-            <a href="gallery.html">Galería</a>
-            <a href="aboutUs.html">Sobre nosotros</a>
+            <a href="reservation.html">Reservation</a>
+            <a href="contact.html">Contact</a>
+            <a href="gallery.html">Gallery</a>
+            <a href="aboutUs.html">About us</a>
             <a class="icon">
               <i class="fa fa-bars"></i>
             </a>
