--- a/contact.html
+++ b/contact.html
@@ -20,11 +20,11 @@
      
         <div class="topnav" id="myTopnav">
             <a href="contact.html" class="active">Contacto</a>
-            <a href="index.html">Inicio</a>
+            <a href="index.html">Home</a>
             <a href="menu.html">Menu</a>
-            <a href="reservation.html">Reservas</a>
-            <a href="gallery.html">Galería</a>
-            <a href="aboutUs.html">Sobre nosotros</a>
+            <a href="reservation.html">Reservation</a>
+            <a href="gallery.html">Gallery</a>
+            <a href="aboutUs.html">About us</a>
             <a class="icon">
               <i class="fa fa-bars"></i>
             </a>
