subido galeria y menu

--- a/menu.html
+++ b/menu.html
@@ -6,7 +6,7 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="css/hojaDeEstilos.css">
+        <!--<link rel="stylesheet" href="css/hojaDeEstilos.css">-->
         <!-- Load an icon library to show a hamburger menu (bars) on small screens -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <link rel="stylesheet" href="css/menuStyle.css">     
